
#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for
#        the BunchLengthMonitor IOC Application.
#
#  Auth: 10-May-2017 C. Ford         (caf)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------

R1.1.0: 10-May-2018, C. Bianchini   (carolina)
	Update new firmware, new configuration file, updated modules 
	 version, updated API version, updated st.cmd to use proprerly
	 dbLoadRecords for BSA and data type for addBsa() calls.

R1.0.6: Add support for INCONSISTENT shutter and filter state.
        INCONSISTENT means both limit switches are active.
        Create BpmStatus and TmitStatus PVs and add to expert display.
        Create temperature PVs and add to top-level display. 
        Remove vioc-* startup script, as sioc-* is now used instead.
R1.0.5: Update YAML files to support new firmware.
        Adjust PV names to follow LCLS naming conventions.
        Create sioc-* directories under iocBoot.
        Define new PVs for 5 new regs related to status of TMIT and BSA.
R1.0.4: Add buttons to top-level screen for enabling waveform display.
        Update YAML files to support V3 firmware. 
R1.0.3: Update YAML files to support new firmware, upstream bug fixes.
R1.0.2: Build with: ycpswasyn R1.1.6
                    bsaDriver R0.9.9
                    yamlLoader R1.0.3
                    bsa API R1.0.1
R1.0.1: Build with new ycpswasyn: version = R1.1.1
R1.0.0: Initial import of the LCLS II BunchLengthMonitor IOC Application
        Built against EPICS R3.15.5-1.0