@@ -26,6 +26,10 @@ DB_INSTALLS += $(YCPSWASYN)/db/bo.template
 DB_INSTALLS += $(YCPSWASYN)/db/waveform_stream16.template
 DB_INSTALLS += $(YCPSWASYN)/db/waveform_stream32.template
 
+# Install Database for tprPattern module
+DB_INSTALLS += $(TPRPATTERN)/db/tprPattern.db
+DB_INSTALL += $(CROSSBARCONTROL)/db/crossbarCtrl.db
+
 # For BSA
 DB_INSTALLS += $(BSADRIVER)/db/bsa.db
 
